--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="image_toggle_on">Image!</string>
   <string name="transform_toggle_on">Transform!</string>
   <string name="image_toggle_off">Image</string>
-  <string name="buzz_toggle_off">Transform</string>
+  <string name="transform_toggle_off">Transform</string>
   <string name="current_image">Current Image = %d</string>
   <string name="transform_name">Transform Name = %d</string>
 </resources>
