--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,20 @@
 <resources>
   <string name="app_name">IronOrImgTransform</string>
-  <string name="image_toggle_on">Image!</string>
   <string name="transform_toggle_on">Transform!</string>
   <string name="image_toggle_off">Image</string>
   <string name="transform_toggle_off">Transform</string>
   <string name="current_image">Current Image = %d</string>
   <string name="transform_name">Transform Name = %d</string>
 
-  <string name="transform_type_1">Transform1</string>
-  <string name="transform_type_2">Transform2</string>
-  <string name="transform_type_3">Transform2</string>
+  <string name="transforms_on">On</string>
+  <string name="transforms_cancel">Cancel</string>
+
+  <string-array name="transforms_choice">
+    <item>Transform1</item>
+    <item>Transform2</item>
+  </string-array>
+
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
